--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "SpellCheckingInspection" for whole file
 
+spring.datasource.url=jdbc:mysql://localhost:3306/cnkb\
+      ?useUnicode=true\
+      &characterEncoding=utf-8\
+      &useSSL=false\
+      &serverTimezone=Asia/Seoul\
+      &use.JDBCCompliantTimezoneShift=true\
+      &useLegacyDatetimeCode=false\
+      &autoReconnection=true
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+spring.devtools.livereload.enabled=true
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
