--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 	implementation group: 'org.reflections', name: 'reflections', version: '0.9.10'
 	compileOnly 'org.projectlombok:lombok:1.18.20'
