--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
+security.jwt.token.secret-key=myownprojectnamedcnkbwhichwaskakaotalkbot
+security.jwt.token.expire-length=1800000
+
 spring.devtools.livereload.enabled=true
 
 spring.servlet.multipart.max-file-size=100MB
