--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 security.jwt.token.secret-key=myownprojectnamedcnkbwhichwaskakaotalkbot
-security.jwt.token.expire-length=1800000
+security.jwt.token.access-expire-millis=1800000
+security.jwt.token.refresh-expire-millis=1209600000
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
