Add WebSocket-Connection base code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-security.jwt.token.secret-key=myownprojectnamedcnkbwhichwaskakaotalkbot
+security.jwt.token.secret-key=myownprojectnamedcnkb@whichwaskakaotalkbot
 security.jwt.token.access-expire-millis=1800000
 security.jwt.token.refresh-expire-millis=1209600000
 
