--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cnkb\
       ?useUnicode=true\
       &characterEncoding=utf-8\
       &useSSL=false\
+      &allowPublicKeyRetrieval=true\
       &serverTimezone=Asia/Seoul\
       &use.JDBCCompliantTimezoneShift=true\
       &useLegacyDatetimeCode=false\
       &autoReconnection=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=64qlalfqjsgh60!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
