--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 //file:noinspection GrUnresolvedAccess
 //file:noinspection GroovyUnusedAssignment
+//file:noinspection GroovyAssignabilityCheck
 
 plugins {
 	id 'java'
@@ -31,11 +32,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.5.6'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.google.firebase:firebase-admin:8.1.0'
+	implementation 'com.google.guava:guava:31.0.1-jre'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testImplementation('org.springframework.boot:spring-boot-starter-test:2.5.6') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
