--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,13 @@
-//file:noinspection GrUnresolvedAccess
-//file:noinspection GroovyUnusedAssignment
 //file:noinspection GroovyAssignabilityCheck
 
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.5.5'
+	id 'org.springframework.boot' version '2.6.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 group = 'lkd.namsic'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 configurations {
 	developmentOnly
@@ -26,20 +24,21 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.google.firebase:firebase-admin:8.1.0'
 	implementation 'com.google.guava:guava:31.0.1-jre'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-	testImplementation('org.springframework.boot:spring-boot-starter-test:2.5.6') {
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
